@@ -7,6 +7,7 @@ class Stocks extends Application {
     function __construct()
     {
         parent::__construct();
+        $this->restrict(array(ROLE_USER,ROLE_ADMIN));
     }
 
     public function index()
