@@ -1,0 +1,7 @@
+
+<form name="login" method="post" action="/auth/submit">
+  UserID: <input type="text" name="userid"></input><br/>
+  Password: <input type="password" name="password"></input><br/>
+  <input type="submit">Submit</input>
+</form>
+
