@@ -1,1 +1,5 @@
 1.0 Initial commit
+
+Assignment 2:
+
+1) Jessica login
